CalicoNetworkPolicy/test-client-calico.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-client
  namespace: argocd
  labels:
    app: usermgmt-webapp2
spec:
  containers:
  - name: curl
    image: curlimages/curl
    command: ["sleep", "3600"]
